# DroneMonitoring

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  api_server.py  data_service.py  docker-compose.yml  graph_service.py  monitoring_test.sqlite3-journal  pyproject.toml  requirements.txt  routing_service.py  sqlite_smoke.db-journal
.pycache_tmp/GitHub/GPS_Dron-main/: api_server.cpython-311.pyc.3103852088176
.pycache_tmp/Users/sad/AppData/Local/Programs/Python/Python311/Lib/: _compression.cpython-311.pyc.3103852795264  _weakrefset.cpython-311.pyc.3103843667440  argparse.cpython-311.pyc.3103843679408  bz2.cpython-311.pyc.3103851752432  contextlib.cpython-311.pyc.3103839654768  copyreg.cpython-311.pyc.3103843677472  enum.cpython-311.pyc.3103851602096  fnmatch.cpython-311.pyc.3103852795088  functools.cpython-311.pyc.3103839655296  gettext.cpython-311.pyc.3103852793680  keyword.cpython-311.pyc.3103839661280  linecache.cpython-311.pyc.3103843671840  locale.cpython-311.pyc.3103843678000  lzma.cpython-311.pyc.3103851398768  operator.cpython-311.pyc.3103839661456  py_compile.cpython-311.pyc.3103843667440  reprlib.cpython-311.pyc.3103839660224  (+8 more)
data/: smoke_test.sqlite3  smoke_test.sqlite3-journal  test_monitoring_service_live.sqlite3  test_monitoring_service_live_cf6d6fdf.sqlite3  test_monitoring_service_synth_5e8c21bc.sqlite3  test_scope.sqlite3
drone_monitoring/: __init__.py  api.py  db.py  processing.py  schemas.py  service.py
static/: index.html  mission_monitor.html  mission_setup.html
tests/: test_monitoring_service.py  test_routing_chargers.py
(+13 files in other folders)
